--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,29 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start:dev": "nodemon index.js",
-        "server": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.1",
-        "express-validator": "^6.13.0",
-        "mongoose": "^6.0.12"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.14"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Repositorio de pruebas ABP",
+  "main": "index.js",
+  "scripts": {
+    "start:dev": "nodemon index.js",
+    "server": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "Elizabeth Balbín",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "repopruebas"
+  }
 }
